--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,48 @@
-<h1>Rafael Henrique Antunes</h1>
+<h1>Welcome to CSE Motors!</h1>
+
+<div class="hero">
+     <div class="hero-text">
+        <h2>DMC Delorean</h2>
+        <p>3 Cup holders</p>
+        <p>Superman doors</p>
+        <p>Fuzzy dice!</p>
+        <br>
+        <a href="/inventory" class="btn">Own Today</a>
+    </div>  
+  <img src="../images/vehicles/delorean.jpg" alt="Image of a car">
+</div>
+
+
+<div class="information">
+  <div>
+    <h2>Doleran Upgrades</h2>
+    <div class="upgrade">
+            <figure>
+                <img src="../images/Upgrades/flux-cap.png" alt="Image of a flux capacitor">
+                <figcaption>Flux Capacitor</figcaption>
+            </figure>
+            <figure>
+                <img src="../images/Upgrades/flame.jpg" alt="Image of flame decals">
+                <figcaption>Flame Decals</figcaption>
+            </figure>
+            <figure>
+                <img src="../images/Upgrades/bumper_sticker.jpg" alt="Image of a bumper sticker">
+                <figcaption>Bumper Sticker</figcaption>
+            </figure>
+            <figure>
+                <img src="../images/Upgrades/hub-cap.jpg" alt="Image of a hub cap">
+                <figcaption>Hub Caps</figcaption>
+            </figure>
+    </div>
+  </div>
+
+  <div>
+    <h2>DMC Delorean Reviews</h2>
+    <ul>
+      <li>"So fast it's almost like traveling in tome." (4/5)</li>
+      <li>"Coolest ride on the road." (4/5)</li>
+      <li>"The most futuristic ride of our day." (4.5/5)</li>
+      <li>"80's livin and I love it!" (5/5)</li>
+    </ul>
+  </div>
+</div>
