--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,150 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 /******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+  font-family: 'ubuntu', sans-serif;
+}
+
+body {
+  background-image: url('../images/site/small_check.jpg');
+  background-size: cover;
+}
+
+#wrapper {
+  max-width: 1200px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: white;
+  border: #284B63 5px solid;
+  border-radius: 8px;
+}
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  color: black;
+  margin: 20px;
+}
+
+#top-header span {
+    font-weight: bold;
+    font-size: 30px;
+  }
+
+#top-header a {
+  text-decoration: none;
+  color: inherit;
+  
+}
+
+
+.hero {
+  position: relative;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+.hero-text {
+  position: absolute;
+  margin: 0 0 0 3px;
+  text-align: left;
+  background-color: rgba(255, 255, 255, 0.599);
+  color: #284B63;
+  font-size: 10px;
+}
+
+.hero img{
+  width: 70%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  color: white;
+  background-color: #284B63;
+  box-shadow: #555a5a 2px 2px 5px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.information {
+  display: grid;
+  grid-template-columns: auto;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.upgrade {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  text-align: center;
+}
+
+
+
+nav {
+  background-color: #353535;
+  color: white;
+  padding: 10px 0;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+}
+
+footer {
+  color: black;
+}
+
+@media (min-width: 768px) {
+  .hero-text {
+    position: absolute;
+    padding: 2%;
+    margin: 0 0 0 50px;
+    text-align: left;
+    background-color: rgba(255, 255, 255, 0.599);
+    color: #284B63;
+    font-size: 24px;
+  }
+
+  .information {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    font-size: 20px;
+  }
+
+  .upgrade {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    text-align: center;
+  }
+
+  .btn {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: #284B63;
+  box-shadow: #555a5a 2px 2px 5px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+
 }
