--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,19 +18,19 @@
     <h2>Doleran Upgrades</h2>
     <div class="upgrade">
             <figure>
-                <img src="/images/Upgrades/flux-cap.png" alt="Image of a flux capacitor">
+                <img src="/images/upgrades/flux-cap.png" alt="Image of a flux capacitor">
                 <figcaption>Flux Capacitor</figcaption>
             </figure>
             <figure>
-                <img src="/images/Upgrades/flame.jpg" alt="Image of flame decals">
+                <img src="/images/upgrades/flame.jpg" alt="Image of flame decals">
                 <figcaption>Flame Decals</figcaption>
             </figure>
             <figure>
-                <img src="/images/Upgrades/bumper_sticker.jpg" alt="Image of a bumper sticker">
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="Image of a bumper sticker">
                 <figcaption>Bumper Sticker</figcaption>
             </figure>
             <figure>
-                <img src="/images/Upgrades/hub-cap.jpg" alt="Image of a hub cap">
+                <img src="/images/upgrades/hub-cap.jpg" alt="Image of a hub cap">
                 <figcaption>Hub Caps</figcaption>
             </figure>
     </div>
