--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
-
+<%- messages() %>
 <div class="hero">
      <div class="hero-text">
         <h2>DMC Delorean</h2>
