--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -20,13 +20,13 @@
 <form method="POST" action="/account/register">
   <fieldset>
     <label for="account_firstname">First Name</label>
-    <input type="text" id="account_firstname" name="account_firstname" required>
+    <input type="text" name="account_firstname" id="account_firstname" required value="<%= locals.account_firstname %>">
 
     <label for="account_lastname">Last Name</label>
-    <input type="text" id="account_lastname" name="account_lastname" required>
+    <input type="text" name="account_lastname" id="account_lastname" required value="<%= locals.account_lastname %>">
 
     <label for="account_email">Email</label>
-    <input type="email" id="account_email" name="account_email" required>
+    <input type="email" name="account_email" id="account_email" required value="<%= locals.account_email %>">
 
     <label for="account_password">Password:</label>   
     <input type="password" name="account_password" id="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
