--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -13,3 +13,13 @@
     <li><a href="/inv/classification/add">Add Classification</a></li>
     <li><a href="/inv/classification/add-inventory">Add Vehicle</a></li>
 </ul>
+
+<h2>Manage Inventory</h2>
+<p>Choose a classification to see those inventory items.</p>
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/inventory.js"></script>
