--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,15 @@
     <a href="/" title="Return to home page">CSE Motors</a>
   </span>
   <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
+   <div id="tools">
+    <% if (loggedin && accountData) { %>
+      <a href="/account/logged-in" title="Profile">
+        <%= accountData.account_firstname %> <%= accountData.account_lastname %>
+      </a>
+      |
+      <a href="/account/logout" title="Logout">Logout</a>
+    <% } else { %>
+      <a title="Click to log in" href="/account/login">My Account</a>
+    <% } %>
   </div>
 </header>
