--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -16,7 +16,7 @@
 <%- messages() %>
 
 <%# edit vehicle form %>
- <form action="/inv/update" method="POST">
+ <form action="/inv/update" method="POST" enctype="multipart/form-data">
     <fieldset>
       <label for="classificationSelect">Classification</label>
       <%- classificationSelect %>
@@ -36,13 +36,14 @@
       <label for="inv_description">Description</label>
       <textarea name="inv_description" id="inv_description" required><%= inv_description || '' %></textarea>
 
-      <label for="inv_image">Image Path</label>
-      <input type="text" name="inv_image" id="inv_image" required
-        value="<%= inv_image && inv_image.trim() !== '' ? inv_image : '/images/vehicles/no-image.png' %>">
+      <p>Upload an Image if this car have</p>
+      <label for="inv_image" class="custom-upload">Upload an Image</label>
+     <input type="file" name="inv_image_upload" id="inv_image" accept="image/*"><br>
 
-      <label for="inv_thumbnail">Thumbnail Path</label>
-      <input type="text" name="inv_thumbnail" id="inv_thumbnail" required
-        value="<%= inv_thumbnail && inv_thumbnail.trim() !== '' ? inv_thumbnail : '/images/vehicles/no-image-tn.png' %>">
+      <p>Upload an Thumbnail if this car have</p>
+      <label for="inv_thumbnail" class="custom-upload">Upload a Thumbnail</label>
+       <input type="file" name="inv_thumbnail_upload" id="inv_thumbnail" accept="image/*"><br>
+
 
       <label for="inv_price">Price</label>
       <input type="number" name="inv_price" id="inv_price" required step="0.01" min="0"
@@ -61,3 +62,5 @@
            <input type="hidden" name="inv_id"
             <% if(locals.inv_id) { %> value="<%= locals.inv_id %>"
             <% } %>>
+    </fieldset>
+  </form>
